--- a/WebContent/css/home.css
+++ b/WebContent/css/home.css
@@ -26,3 +26,15 @@ h2 {
   font-size: 17px;
   color: rgb(25, 153, 238);
 }
+.radioRegistration{
+  width: 50px;
+  height: 25px;
+  margin-top: 10px;
+}
+#dateofbirth {
+border: 1px solid #c4c4c4;
+  border-radius: 5px;
+  background-color: #fff;
+  padding: 3px 5px;
+  box-shadow: inset 0 3px 6px rgba(0,0,0,0.1);
+}
