--- a/WebContent/css/header.css
+++ b/WebContent/css/header.css
@@ -51,19 +51,22 @@ input {
   position: fixed;
   -webkit-animation: navbar-animation 0.6s;
   animation: navbar-animation 0.6s;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width: 991px) {
   .navbar-brand {
     margin-left: 20px;
   }
   .navbar-nav {
     padding: 0 20px;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 0.6);
   }
-  .navbar.fixed-top .navbar-nav {
-    background: transparent;
+  .navbar-dark .navbar-nav .nav-link {
+    position: relative;
+    color: white;
+    font-size: 0.9rem;
   }
   input {
     width: 160px;
