--- a/WebContent/css/baseDialog.css
+++ b/WebContent/css/baseDialog.css
@@ -16,3 +16,6 @@ button.close {
    -moz-box-shadow:  0px 0px 20px 0px black!important;
         box-shadow:  0px 0px 20px 0px black!important;
 }
+ body{
+   padding-right: 0px!important;
+}
