--- a/WebContent/css/header.css
+++ b/WebContent/css/header.css
@@ -22,6 +22,8 @@ input {
   width: 100%;
   transition: background 0.6s ease-in;
   height: 68px;
+  box-shadow: 0px 0px 17px 1px;
+  border: none;
 }
 .navbar .navbar-brand {
   font-family: "Lobster", cursive;
