--- a/WebContent/css/onlineRestaurants.css
+++ b/WebContent/css/onlineRestaurants.css
@@ -1,10 +1,11 @@
 #onlineRestaurantsSection {
   display: flex;
-  height: 800px;
+  height: 100%;
   width: 100%;
   background: url("../app/img/lily-banse--YHSwy6uqvk-unsplash.jpg") no-repeat;
   background-size: cover;
 }
+
 #onlineRestaurantsSection h1 {
   font-size: 4rem;
   font-weight: 700;
