--- a/WebContent/css/restaurantPage.css
+++ b/WebContent/css/restaurantPage.css
@@ -48,3 +48,15 @@ width: 100px;
 #restaurantTextSection{
   background: green;
 }
+
+#restaurantPageArticle{
+  margin-top: 50px;
+  background: white;
+  width: 100%;
+  height: 500px;
+}
+
+.iplus{
+  font-size:  35px;
+  padding: 10px;
+}
