--- a/WebContent/css/home.css
+++ b/WebContent/css/home.css
@@ -24,3 +24,8 @@ border: 1px solid #c4c4c4;
   padding: 3px 5px;
   box-shadow: inset 0 3px 6px rgba(0,0,0,0.1);
 }
+
+.loginError{
+  color: red;
+  font-size: 14px;
+}
