--- a/WebContent/css/baseArticle.css
+++ b/WebContent/css/baseArticle.css
@@ -88,6 +88,7 @@ border-top: 1px solid grey;
 }
 
 .buttonCartMinus{
+  margin: 0;
   background: white;
   width: 100px;
   height: 55px;
@@ -97,6 +98,7 @@ border-top: 1px solid grey;
   border-bottom-left-radius: 10px;
 }
 .buttonCartPlus{
+  margin: 0;
   background: white;
   width: 100px;
   height: 55px;
