--- a/WebContent/css/restaurantPage.css
+++ b/WebContent/css/restaurantPage.css
@@ -10,6 +10,10 @@ background-size: cover;
 padding: 0px;
 }
 
+.white{
+  color:white;
+}
+
 .gradeAndSearch{
   position: absolute;
   background: white;
